[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/font/alkhemikal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/main_menu_button_box.png" type="Texture" id=2]
[ext_resource path="res://objects/ui/ButtonListVerticalScroll.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 90, 47 )
margin_left = 18.9633
margin_right = 18.9107
margin_top = 14.0969
margin_bottom = 14.0

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -7
extra_spacing_bottom = -7
font_data = ExtResource( 1 )

[node name="ButtonListVerticalScroll" type="VBoxContainer"]
margin_right = 312.0
margin_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = -8
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
margin_right = 312.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.243137 )
text = "Item 4"
align = 1

[node name="Label2" type="Label" parent="."]
margin_top = 12.0
margin_right = 312.0
margin_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.423529 )
text = "Item 5"
align = 1

[node name="Label3" type="Label" parent="."]
margin_top = 35.0
margin_right = 312.0
margin_bottom = 97.0969
grow_horizontal = 2
grow_vertical = 2
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Item 1"
align = 1

[node name="Label4" type="Label" parent="."]
margin_top = 90.0
margin_right = 312.0
margin_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.423529 )
text = "Item 2"
align = 1

[node name="Label5" type="Label" parent="."]
margin_top = 114.0
margin_right = 312.0
margin_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.243137 )
text = "Item 3"
align = 1
